fixing broken links

--- a/_config.yml
+++ b/_config.yml
@@ -40,9 +40,9 @@ disqus_shortname:   taylantatli
 #email:
 #twitter:            username
 #facebook:           username
-github-url:         https://github.com/geospatial-jeff
+github-url:         geospatial-jeff
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-linkedin:          https://www.linkedin.com/in/jeff-albrecht-5a2b86148/
+linkedin:          jeff-albrecht-5a2b86148
 #xing:              username
 #instagram:          username
 #lastfm:            username
