--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus_shortname:   taylantatli
 #email:
 #twitter:            username
 #facebook:           username
-github-url:         geospatial-jeff
+github-url:         geospatial-jeff/cognition-framework
 #stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
 linkedin:          jeff-albrecht-5a2b86148
 #xing:              username
